--- a/src/index.css
+++ b/src/index.css
@@ -23,15 +23,32 @@
   font-family: "San Francisco Pro", -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
-
   align-self: self-start;
 }
 
-/* body {
-    font-family: 
-  } */
-/* p {
-  color: red;
-  font-family: SanfPro, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-} */
+@keyframes openImage {
+  0% {
+    transform: translateY(600px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes sideImageAni {
+  0% {
+    transform: rotateY(30deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+.image-open {
+  animation: openImage 1.9s ease-in-out;
+  transition: all 0.5s ease-in;
+}
+
+.side-image-ani {
+  animation: sideImageAni 0.5s ease-in-out;
+  transition: all 0.5s ease-in;
+}
